@@ -16,3 +16,4 @@ total levels passed
 total actions
 total safeguards used
 bank prize 7 is a real mission credit, award.
+fix performance impact on first level  if performance is disabled
